fix(intro): added touchstart support for canvas start button on mobile devices

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ canvas {
   border: 3px solid black;
   display: block;
   cursor: url("img/GUI/8 Cursors/2.png"), auto;
+  touch-action: none;
 }
 
 @media only screen and (max-width: 760px) {
